# pdf-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/pdf_generator/: __init__.py  cli.py  config.py  core.py  fonts.py  styles.py
